--- a/public/slouch-app/index.html
+++ b/public/slouch-app/index.html
@@ -33,7 +33,7 @@
                   type="button"
                   class="badge ghost"
                   aria-label="Open contact form">
-            Contact
+            Help Us Improve
           </button>
         </div>
 
