--- a/public/slouch-app/index.html
+++ b/public/slouch-app/index.html
@@ -125,13 +125,13 @@
 
 
   <!-- Existing app script -->
-  <script type="module" src="script.js"></script>
+  <script type="module" src="js/script.js"></script>
 
   <!-- Non-Chromium browser guard for Keep Active (classic script for Safari) -->
-  <script src="pip-compat.js" defer></script>
+  <script src="js/pip-compat.js" defer></script>
 
   <!-- Onboarding tutorial script -->
-  <script type="module" src="onboarding.js"></script>
+  <script type="module" src="js/onboarding.js"></script>
 
 
 <!-- Contact Modal -->
