--- a/public/slouch-app/index.html
+++ b/public/slouch-app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Posturally</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2025-09-17">
 </head>
 <body>
   <div class="container">
@@ -140,17 +140,17 @@
   <video id="pipVideo" playsinline muted style="display:none;"></video>
 
 <!-- Slider → threshold script -->
-<script type="module" src="js/sensitivity.js"></script>
+<script type="module" src="js/sensitivity.js?v=2025-09-17"></script>
 
 
   <!-- Existing app script -->
-  <script type="module" src="script.js"></script>
+  <script type="module" src="script.js?v=2025-09-17"></script>
 
   <!-- Non-Chromium browser guard for Keep Active (classic script for Safari) -->
-  <script src="pip-compat.js" defer></script>
+  <script src="pip-compat.js?v=2025-09-17" defer></script>
 
   <!-- Onboarding tutorial script -->
-  <script type="module" src="onboarding.js"></script>
+  <script type="module" src="onboarding.js?v=2025-09-17"></script>
 
 
 <!-- Contact Modal -->
